
  o Minor bugfixes (server):
    - Do not rotate onion key immediately after setting it for the first
      time.

  o Minor bugfixes (directory servers):
    - Stop calling servers that have been hibernating for a long time
      "stable". Also, stop letting hibernating or obsolete servers affect
      uptime and bandwidth cutoffs.
    - Stop listing hibernating servers in the v1 directory.

  o Minor bugfixes (other):
    - Fix an assert that could trigger if a controller quickly set then
      cleared EntryNodes.  (Bug found by Udo van den Heuvel.)
    - On architectures where sizeof(int)>4, still clamp declarable bandwidth
      to INT32_MAX.
    - Fix a potential race condition in the rpm installer.  Found by
      Stefan Nordhausen.
    - Try to fix eventdns warnings once and for all: do not treat a dns rcode
      of 2 as indicating that the server is completely bad; it sometimes
      means that the server is just bad for the request in question. (may fix
      the last of bug 326.)
    - On mingw, use "%I64u" to printf/scanf 64-bit integers, instead of the
      usual GCC "%llu".  This prevents a bug when saving 64-bit int
      configuration values on mingw; the high-order 32 bits would get
      truncated.  If the value was then reloaded, disaster would
      occur. (Fixes bug 400 and maybe also bug 397.)


Changes in version 0.1.2.8-beta - 2007-02-26
  o Major bugfixes (crashes):
    - Stop crashing when the controller asks us to resetconf more than
      one config option at once. (Vidalia 0.0.11 does this.)
    - Fix a crash that happened on Win98 when we're given command-line
      arguments: don't try to load NT service functions from advapi32.dll
      except when we need them. (Bug introduced in 0.1.2.7-alpha;
      resolves bug 389.)
    - Fix a longstanding obscure crash bug that could occur when
      we run out of DNS worker processes. (Resolves bug 390.)

  o Major bugfixes (hidden services):